Add NeDB -> npm install --save nedb feathers-nedb
Co-Authored-By: Edward Almanzar <edward@menteware.com>

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="text" id="message-text" placeholder="Enter message here">
       <button type="submit" class="button button-primary">Send message</button>
     </form>
-    <h1><a href="http://192.168.1.77:3030/messages">Click here to see array of messages </a></h1> 
+    <h1><a href="http://localhost:3030/messages">Click here to see array of messages </a></h1> 
     <h2>Here are the current messages:</h2>
     
     <div id="messages-list"> </div>
